--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "growl": "^1.10.0",
+    "https-proxy-agent": "^2.2.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
